@@ -245,7 +245,7 @@ omxGetRAMDepth <- function(A, maxdepth = nrow(A) - 1) {
 	mxObject <- A
 	aValues <- matrix(0, nrow(mxObject), ncol(mxObject))
 	defvars <- apply(mxObject@labels, c(1,2), imxIsDefinitionVariable)
-	squarebrackets <- apply(mxObject@labels, c(1,2), hasSquareBrackets)
+	squarebrackets <- mxObject@.squareBrackets
 	aValues[mxObject@free] <- 1
 	aValues[mxObject@values != 0] <- 1
 	aValues[defvars] <- 1
